# Grime

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  fovdata.txt  imgui.ini  runner.sh
.cache/clangd/index/: _fixes.hpp.021DC52046B225A9.idx  _vectorize.hpp.9A50DF0AACC7DA12.idx  app.cpp.0A0EC63859D7C398.idx  app.cpp.CFCEA1DBFF7A421A.idx  application.cpp.DAF33BF8406CAED4.idx  application.h.F58413F14C2607F0.idx  camera.cpp.7B828C73E49FED88.idx  camera.h.A96FACDA087D7D96.idx  common.hpp.A6B27B6FEFBBB521.idx  compute_common.hpp.F978BB276D31AD2D.idx  compute_vector_relational.hpp.3461F146753728A2.idx  constants.hpp.B1F1396AE5D43A68.idx  constants.inl.16910DDC00DAFCE7.idx  epsilon.hpp.09843B652218BEED.idx  epsilon.inl.09C04D73BB25A46A.idx  event.cpp.4D4E933869B6F429.idx  event.h.40DDC7EBD44FCAEA.idx  exponential.hpp.3289A5747329AA04.idx  frameBuffer.cpp.A3BD7D0F4533F805.idx  frameBuffer.h.F9782FC0119C1BD9.idx  func_common.inl.A93354CFDE4154D1.idx  func_exponential.inl.708C3C546F14D36A.idx  func_geometric.inl.73D56A31303B1D79.idx  fwd.hpp.61C3FAEFC6D3FA03.idx  (+205 more)
res/: graphData.txt
src/: GraphShader.h  application.cpp  application.h  camera.cpp  camera.h  frameBuffer.cpp  frameBuffer.h  graph.cpp  graph.h  graphManager.cpp  graphManager.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  ui.cpp  ui.h  ui_styles.cpp  ui_styles.h  window.cpp  window.h
src/event/: event.cpp  event.h
src/shader/: default.shader  graph.shader  graphGPU.shader  grid.shader  grid.shader.bak  grid.shader.coolWithLighting  instance.shader  mainAxis.shader
